fix: button white space

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -17,6 +17,7 @@ pre {
   background-color: #008674;
   padding: 2rem;
   border-radius: 0.8rem;
+  white-space: break-spaces;
 }
 
 a {
